--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.mobileComputing.groupProject'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.mobileComputing.groupProject"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -31,10 +31,13 @@ android {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
+    implementation 'org.mindrot:jbcrypt:0.4'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-functions:20.4.0'
+    implementation 'com.google.firebase:firebase-firestore:24.11.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
