--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
     implementation 'org.mindrot:jbcrypt:0.4'
+    implementation 'com.google.android.material:material:1.11.0'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
