--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:name=".states.AppStates"
-
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,48 +12,41 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileComputingGP"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
+            android:name=".activities.SplashActivity"
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+</activity>
+
+    <activity
             android:name=".activities.AuthWelcomeActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:exported="true" />
         <activity
             android:name=".activities.AuthLoginActivity"
             android:exported="true" />
-
         <activity
             android:name=".activities.AuthRegisterActivity"
             android:exported="true" />
-
         <activity
             android:name=".activities.MainGroupsActivity"
             android:exported="true" />
-
         <activity
             android:name=".activities.MainCreateGroupActivity"
             android:exported="true" />
-
         <activity
             android:name=".activities.MainUserProfileActivity"
             android:exported="true" />
-
         <activity
             android:name=".activities.MainGroupTasksActivity"
             android:exported="true" />
-
         <activity
             android:name=".activities.MainCreateTaskActivity"
             android:exported="true" />
-
-<!--        <activity-->
-<!--            android:name=".activities.MainActivity"-->
-<!--            android:exported="true" />-->
     </application>
 
 </manifest>
