--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,12 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
     implementation 'org.mindrot:jbcrypt:0.4'
     implementation 'com.google.android.material:material:1.11.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
-
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
